--- a/draft/p.tex
+++ b/draft/p.tex
@@ -74,7 +74,7 @@
 \renewcommand{\headrulewidth}{0pt}
 \cfoot{\thepage}
 
-\newcommand{\sys}{\mbox{\textsc{SYS}}\xspace}
+\newcommand{\sys}{\mbox{\textsc{Infer}}\xspace}
 
 % cmds: typesetting commands
 \input{cmds}
