--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -37,7 +37,7 @@
 
 \newcommand{\chkindaux}{\textsc{ChkAux}\xspace}
 
-\newcommand{\chkinductive}{\textsc{ChkInd}\xspace}
+\newcommand{\chkinductive}{\textsc{FindTy}\xspace}
 
 \newcommand{\chooseder}{\mathsf{ChooseDer}}
 
@@ -131,6 +131,12 @@
 
 \newcommand{\immsubders}[1]{\mathsf{ImmSubs}[ #1 ]}
 
+\newcommand{\inferaux}{\textsc{Infer}'}
+
+\newcommand{\inferbnd}{\textsc{InferBnd}\xspace}
+
+\newcommand{\initunfold}{\textsc{Unfold}_{\iota}}
+
 \newcommand{\injl}{\cc{injl}}
 
 \newcommand{\injr}{\cc{injr}}
@@ -139,13 +145,13 @@
 
 \newcommand{\instrulepreds}[1]{\mathsf{InstPreds}[ #1 ]}
 
-\newcommand{\interp}[1]{\underline{#1}}
+\newcommand{\interp}[1]{\hat{#1}}
 
 \newcommand{\interps}[1]{\mathsf{Interps[ #1 ]}}
 
 \newcommand{\invsof}[1]{\mathsf{Invs}[ #1 ]}
 
-\newcommand{\isind}{\mathsf{IsInd}}
+\newcommand{\isind}{\mathsf{HasTy}}
 
 \newcommand{\isvalid}{\mathsf{IsValid}}
 
@@ -261,7 +267,7 @@
 
 \newcommand{\subexpseqs}{\mathsf{ExpSeqs}}
 
-\newcommand{\subexptypes}[2]{\mathsf{SubExpTypes}[ #1, #2 ]}
+\newcommand{\subexptypes}[2]{S_{#1}^{#2}}
 
 \newcommand{\symrelpreds}[1]{\mathsf{RelPreds}[ #1 ]}
 
@@ -313,7 +319,11 @@
 
 \newcommand{\unfold}[1]{#1\uparrow}
 
-\newcommand{\unfoldings}[1]{\mathsf{Unfoldings}[ #1 ]}
+\newcommand{\unfoldexp}{\textsc{Unfold}}
+
+\newcommand{\unfolding}{ \preceq }
+
+\newcommand{\unfoldings}[1]{ U_{#1} }
 
 \newcommand{\unfoldreltypes}[2]{\mathsf{UnfoldTypes}[ #1, #2 ]}
 
@@ -329,9 +339,8 @@
 
 \newcommand{\vars}{X}
 
+% dep:
 \newcommand{\verify}{\textsc{Infer}\xspace}
-
-\newcommand{\verifyaux}{\textsc{VAux}\xspace}
 
 \newcommand{\verifybnd}{\textsc{InferUnfld}\xspace}
 
