--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -131,11 +131,9 @@
 
 \newcommand{\immsubders}[1]{\mathsf{ImmSubs}[ #1 ]}
 
-\newcommand{\inferaux}{\textsc{Infer}'}
+\newcommand{\inferaux}{\textsc{Infer}'\xspace}
 
 \newcommand{\inferbnd}{\textsc{InferBnd}\xspace}
-
-\newcommand{\initunfold}{\textsc{Unfold}_{\iota}}
 
 \newcommand{\injl}{\cc{injl}}
 
