simplifies defn of type representations

--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -129,6 +129,10 @@
 
 \newcommand{\idxpos}[1]{P_{#1}}
 
+\newcommand{\idxdatapos}[1]{P_{#1}^D}
+
+\newcommand{\idxvarpos}[1]{P_{#1}^X}
+
 \newcommand{\immsubders}[1]{\mathsf{ImmSubs}[ #1 ]}
 
 \newcommand{\inferaux}{\textsc{Infer}'\xspace}
@@ -302,6 +306,8 @@
 \newcommand{\typos}{P_T}
 
 \newcommand{\typosty}[1]{P_{#1}}
+
+\newcommand{\tyunitfield}{U}
 
 \newcommand{\openpos}[1]{O_T^{#1}}
 
