--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -36,176 +36,33 @@ Relational positions are a class of sequences of type fields, which
 are symbols that denote component types to which algebraic type
 constructors are applied.
 %
-The space of such fields consists of $\typaramfield$, $\tyresfield$,
-$\tyleftprod$, $\tyrightprod$, $\tyleftsum$, $\tyrightsum$, and for
-each $X \in \lfpvars$, $\mu_X$.
+The space of such fields consists of $\tyunitfield$, $\tydatafield$,
+$\typaramfield$, $\tyresfield$, $\tyleftprod$, $\tyrightprod$,
+$\tyleftsum$, $\tyrightsum$, and for each $X \in \lfpvars$, $X$ and
+$\mu_X$.
 %
 The space of positions is denoted $\typos = \typosfields^{*}$.
-
-% define refinement predicates
-Each relational refinement type defines a property of a map from
-indices to types.
-%
-For finite space of indices $I$, the type positions \emph{indexed} by
-$I$ are $\idxpos{I} = I \times \typos$.
-% define relational refinement predicates of indexed types
-Each relational refinement type contains predicates that relate data
-components of types identified by indices.
-%
-\begin{defn}
-  \label{defn:ref-refinements}
-  For indices $I$ and $t : I \to T$,
-  $\varphi \in \refpreds{ \idxpos{I} }$ is a \emph{relational
-    refinement predicate} of $t$ if the following conditions hold:
-  \begin{itemize}
-  \item % vocab are all positions of their indexed types,
-    For each $i \in I$ and $p \in \typos$ such that
-    $(i, p) \in \vocab(\varphi)$, $p$ is a data position of $t(i)$.
-  \item % vocab are all relatable,
-    For each $i \in I$ and all $p, q \in \typos$ such that
-    $(i, p), (i, q) \in \vocab(\varphi)$, it holds that
-    $\relatable{\tau}{p}{q}$.
-  \end{itemize}
-\end{defn}
-
-% introduce inductive defns:
-Each relational refinement type also contains directives for how
-inductive definitions at distinct indices are mutually unfolded in
-order to express a property.
-%
-A partial mutual induction definition relates some inductive types
-that are components of given indexed types.
-%
-\begin{defn}
-  \label{defn:part-mut-unfold}
-  For indices $I$, $t : I \to T$, and $P \subseteq \idxpos{I}$, $P$
-  are a \emph{partial mutual induction set} of $t$ if
-  \begin{itemize}
-  \item % all positions are of type variables,
-    For each $i \in I$ and $p \in \typos$ such that $(i, p) \in P$, it
-    holds that $p$ is a variable position of $t(i)$.
-  \item % all positions are relatable,
-    For each $i \in I$ and all $p, q \in \typos$ such that
-    $(i, p), (i, q) \in P$, it holds that $p \sim q$.
-  \item % no distinct positions that extend an inductive type:
-    For each $i \in I$, $p \in \typos$ a least-fixed point position of
-    $t(i)$, and $q_0, q_1 \in \typos$ such that
-    $(i, q_0 \concat p), (i, q_1 \concat p) \in P$, it holds that
-    $q_0 = q_1$.
-  \end{itemize}
-\end{defn}
-
-% complete induction set:
-A complete mutual induction set relates all inductive types that are
-components of a given vector of indexed types.
-%
-\begin{defn}
-  \label{defn:compl-mut-unfold}
-  For indices $I$ and $t : I \to T$,
-  $\mathcal{Q} \subseteq \pset(\idxpos{I})$ are a \emph{complete}
-  mutual induction set of $t$ if
-  \begin{itemize}
-  \item % each entry is a partial mutual induction defn:
-    Each $P \in \mathcal{Q}$ is a partial mutual induction definition
-    of $P$;
-  \item % covers positions of variables:
-    For each $i \in I$ and $p \in \typos$ a variable position of
-    $t(i)$, there is some $P \in \mathcal{Q}$ such that
-    $(i, p) \in P$.
-  \end{itemize}
-\end{defn}
+% define subspaces of indexed positions:
+For indices $I$, the space of type positions \emph{indexed} by $I$ is
+denoted $\idxpos{I} = I \times \typos$.
 
 % define relational types:
-Relational refinement types relate data components of tuples of types
-defined by mutual induction.
+A relational refinement type is represented as a set of refinement
+predicates that represent relations over data components of types and
+sets of type variables, which represent a definition of how
+least-fixed-point types should be mutually unfolded.
 %
-\begin{defn}
-  \label{defn:rel-types}
-  For indices $I$, a \emph{relational refinement type} over $I$ is a
-  pair $(\Phi, M)$ where for some $t : I \to T$,
-  % 
-  \begin{itemize}
-  \item % refinement predicates,
-    $\Phi \subseteq \refpreds{ \idxpos{I} }$ are relational refinement
-    predicates of $t$.
-  \item % mutual induction defn,
-    $M \subseteq \pset( \idxpos{I} )$ are a complete mutual induction
-    set of $t$.
-  \end{itemize}
-\end{defn}
+\BH{restate}
 %
-The space of relational types over $I$ is denoted $\reltypes{I}$.
-
+For indices $I$, a \emph{relational refinement predicate} over $I$ is
+a refinement predicate whose vocabulary is the space of data type
+positions indexed by $I$ (i.e., the space
+$\refpreds{ \idxpos{I} }$).
 %
-\begin{defn}
-  \label{defn:ty-at-pos}
-  For $\tau, \tau' \in T$ and $p \in \typos$, the fact that $\tau'$ is
-  the type in $\tau$ at $p$ is defined by induction on $p$ as follows.
-  %
-  $\tau$ is the type in $\tau$ at $\epsilon$. Furthermore,
-  %
-  \begin{itemize}
-  \item % function:
-    For all $\tau, \tau', \tau'' \in T$ and each $p \in \typos$ such
-    that $\tau' \to \tau''$ is in $\tau$ at $p$, $\tau'$ is in $\tau$
-    at $\typaramfield \cons p$ and $\tau''$ is in $\tau$ at
-    $\tyresfield \cons p$.
-  \item % sum:
-    For all $\tau, \tau_l, \tau_r \in T$ and each $p \in \typos$ such
-    that $\tau_l + \tau_r$ is in $\tau$ at $p$, $\tau_l$ is in $\tau$
-    at $\tyleftsum \cons p$ and $\tau_r$ is in $\tau$ at
-    $\tyrightsum \cons p$.
-  \item % prod:
-    For all $\tau, \tau_l, \tau_r \in T$ and each $p \in \typos$ such
-    that $\tau_l \times \tau_r$ is in $\tau$ at $p$, $\tau_l$ is in
-    $\tau$ at $\tyleftprod \cons p$ and $\tau_r$ is in $\tau$ at
-    $\tyrightprod \cons p$.
-  \item % lfp:
-    For all $\tau, \tau' \in T$, each $X \in \lfpvars$ and each
-    $p \in \typos$ such that $\mu X. \tau'$ is in $\tau$ at $p$,
-    $\tau'$ is in $\tau$ at $\mu_X \cons p$.
-  \end{itemize}
-\end{defn}
-%
-For each $\tau \in T$, the space of all $p \in \typos$ such that there
-is some $\tau' \in T$ in $\tau$ at $p$ is denoted $\typosty{\tau}$.
-% define data positions.
-For each $\tau \in T$ and $p \in \typosty{\tau}$, if $D$ is in $\tau$
-at $p$, $p$ is a \emph{data} position of $\tau$;
-% define variable positions,
-for each $X \in \lfpvars$ in $\tau$ at $p$, $p$ is a \emph{variable}
-position of $\tau$; %
-% define lfp positions,
-for each $X \in \lfpvars$ and $\tau' \in T$ such that $\mu X. \tau$ is
-in $\tau$ at $p$, $p$ is a \emph{least-fixed point} position of
-$\tau$.
-
-% define relatable type positions:
-Type positions are relatable if they are identical or are positions of
-distinct factors of a component product type.
-%
-\begin{defn}
-  \label{defn:relatable}
-  For each $\tau \in T$ and all $p, q \in \typosty{\tau}$, $p$ and $q$
-  are \emph{relatable in $\tau$} if:
-  \begin{itemize}
-  \item % identity:
-    Each $p \in \typosty{\tau}$ is relatable with itself as a position
-    of $\tau$;
-  \item % distinct factors:
-    For all $\tau_l, \tau_r \in T$ and all $p, q_l, q_r \in \typos$
-    such that $\tau_l \times \tau_r$ is in $\tau$ at $p$ and
-    $q_l \concat [ \tyleftprod ] \concat p, q_r \concat [ \tyrightprod
-    ] \concat p \in \typosty{\tau}$,
-    $q_l \concat [ \tyleftprod ] \concat p$ and
-    $q_r \concat [ \tyrightprod ] \concat p$ are relatable positions
-    of $\tau$.
-  \end{itemize}
-\end{defn}
-%
-The fact that $p, q \in \typos$ are relatable positions of
-$\tau \in T$ is denoted $\relatable{\tau}{p}{q}$.
-
+The space of \emph{relational refinement type representations} over
+$I$ is denoted
+$\reltypes{I} = \pset(\refpreds{ \idxpos{I} }) \times
+\pset(\idxpos{I})$.
 
 % declare typing relation:
 A key contribution of our work is the definition of a typing relation
