partially updates defns of type operators

--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -87,33 +87,62 @@ operators over structural types, generalizations of type operators
 used in refinement type systems, and operators introduced to operate
 over features unique to relational types.
 
+\paragraph{Atomic relational refinement types}
+%
+\BH{complete}
+
 \paragraph{Relational refinement function types}
 %
-The relational function from type $\tau$ to $\tau'$ at index $i$ is a
-relational refinement type in which the type at $i$ is a function from
-the type at $i$ in $\tau$ to the type at $i$ in $\tau'$.
+The relational function from type $\tau$ to $\tau'$ at index $i$ over
+abstraction variable $x$ is a relational refinement type in which the
+type at $i$ is a function from the type at $i$ in $\tau$ to the type
+at $i$ in $\tau'$, and all references to $x$ in $\tau'$ are replaced
+with references to components of $\tau$.
+% define type position field prepended to formulas
+For indices $I$, $i, j \in I$, $\varphi \in \refpreds{ \idxpos{I} }$,
+and $f \in \typosfields$, $f$ prepended to $\varphi$ is
+$f \prepend{i}{j} \varphi = \varphi[ \setformer{ (j, f \cons p) /
+  (i, f)}{ p \in \typos } ]$.
+% 
+For $\Phi \subseteq \refpreds{ \idxpos{I} }$, $f$ prepended to $\Phi$
+is
+$f \prepend{i}{j} \Phi = \setformer{ f \prepend{i}{j} \varphi }{
+  \varphi \in \Phi }$.
+% define type position field prepended to mutual induction sets,
+For $M \subseteq \idxpos{I}$, $f$ prepended to $M$ is
+$f \prepend{i}{j} M = \setformer{ (i, f \cons p) }{ p \in \typos,
+  (i, p) \in M}$.
 %
-I.e., for the space of indices $I$, index $i \in I$, %
+For $\mathcal{M} \subseteq \pset(\idxpos{I})$, $f$ prepended to
+$\mathcal{M}$ is
+$f \prepend{i}{j} \mathcal{M} = \setformer{ f \prepend{i}{j} M }{ M
+  \in \mathcal{M} }$.
+
+% define function operator,
+For index $i \in I$, $x \in \absvars$ %
 $\Phi, \Phi' \subseteq \refpreds{ \idxpos{I} }$, and %
 $\mathcal{M}, \mathcal{M}' \subseteq \pset(\idxpos{I})$, the function
-from $(\Phi, \mathcal{M})$ to $(\Phi', \mathcal{M}')$ at $i$, denoted
-$(\Phi, \mathcal{M}) \to_i (\Phi', \mathcal{M}')$, is
-$(\Phi'', \mathcal{M}'')$, where %
+from $(\Phi, \mathcal{M})$ to $(\Phi', \mathcal{M}')$ at $i$ is
+$(\Phi, \mathcal{M}) \to^i_x (\Phi', \mathcal{M}') = (\typaramfield
+\prepend{i}{i} \Phi \union \Phi'', \typaramfield \prepend{i}{i}
+\mathcal{M} \union \mathcal{M}'')$, where
+%
+\BH{only let this be defined in cases in which resulting mutual
+  induction sets work}
 \begin{align*}
-  \Phi'' \equiv & %
-  \setformer{ \replace{ \varphi }{ (i, p) }{ (k, \typaramfield \cons p) } }{ %
-    \varphi \in \Phi, p \in \typos } \union %
-  \setformer{ \replace{ \varphi }{ (j, p) }{(k, \tyresfield \cons p)} }{ %
-                  \varphi \in \Phi', p \in \typos } \\
-  \mathcal{M}'' \equiv & %
-  \setformer{ \replace{ M }{ (i, p) }{ (k, \typaramfield \cons p) } }{ %
-  M \in \mathcal{M}, p \in \typos } \union
-  \setformer{ \replace{ M }{ (j, p) }{ (k, \tyresfield \cons p) } }{ %
-  M \in \mathcal{M}', p \in \typos }
+  % renamed result predicates,
+  \Phi'' \equiv & \setformer{ %
+                  \varphi[ (j, \typaramfield \cons p) / %
+                  (x, \tyresfield \cons p) ] }{ %
+                  \varphi \in \tyresfield \prepend{i}{i} \Phi' } \\
+  % tricky mutual induction sets are 
+  \mathcal{M}'' \equiv & \setformer{
+                         \setformer{ (j, p) }{ %
+                         j \not= x, p \in \typos, (j, p) \in M } \union
+                         \setformer{ (i, \typaramfield \cons p) }{ %
+                         p \in \typos, (x, \tyresfield \cons p) \in M } }{
+                         M \in \tyresfield \prepend{i}{i} \mathcal{M}' }
 \end{align*}
-It is straightforward to prove that if $(\Phi, \mathcal{M})$ and
-$(\Phi', \mathcal{M}')$ are relational refinement types, then
-$(\Phi'', \mathcal{M}'')$ is a relational refinement type.
 
 % define relational sum:
 \paragraph{Relational refinement sum types} The relational sum of
@@ -125,24 +154,11 @@ I.e., for space of indices $I$, indices $i, j, k \in I$,
 $\Phi, \Phi' \subseteq \refpreds{ \idxpos{I} }$, and
 $\mathcal{M}, \mathcal{M}' \subseteq \pset(\idxpos{I})$, the sum of
 $(\Phi, \mathcal{M})$ and $(\Phi', \mathcal{M}')$ from $i$ and $j$ to
-$k$, denoted $(\Phi, \mathcal{M}) +_{i, j}^k (\Phi', \mathcal{M}')$ is
-$(\Phi'', \mathcal{M}'')$, where $\Phi''$ is
-\begin{align*}
-  \Phi'' \equiv & %
-  \setformer{ \replace{ \varphi }{ (i, p) }{ (k, \tyleftsum \cons p) } }{ %
-    \varphi \in \Phi, p \in \typos } \union %
-  \setformer{ \replace{ \varphi }{ (j, p) }{(k, \tyrightsum \cons p)} }{ %
-                  \varphi \in \Phi', p \in \typos } \\
-  \mathcal{M}'' \equiv & %
-  \setformer{ \replace{ M }{ (i, p) }{ (k, \tyleftsum \cons p) } }{ %
-  M \in \mathcal{M}, p \in \typos } \union
-  \setformer{ \replace{ M }{ (j, p) }{ (k, \tyrightsum \cons p) } }{ %
-  M \in \mathcal{M}', p \in \typos }
-\end{align*}
-%
-It is straightforward to prove that if $(\Phi, \mathcal{M})$ and
-$(\Phi', \mathcal{M}')$ are relational refinement types, then
-$(\Phi'', \mathcal{M}'')$ is a relational refinement type.
+$k$ is
+$(\Phi, \mathcal{M}) +_{i, j}^k (\Phi', \mathcal{M}') = (\tyleftsum
+\prepend{i}{k} \Phi \union \tyrightsum \prepend{j}{k} \Phi',
+\tyleftsum \prepend{i}{k} \mathcal{M} \union \tyrightsum
+\prepend{j}{k} \mathcal{M}')$.
 
 % define relational product:
 \paragraph{Relational refinement product types}
@@ -153,25 +169,10 @@ product of types at $i$ and $j$.
 I.e., for space of indices $I$, indices $i, j, k \in I$,
 $\Phi \subseteq \refpreds{ \idxpos{I} }$, and
 $\mathcal{M} \subseteq \pset(\idxpos{I})$, the relational product of
-$(\Phi, \mathcal{M})$ from $i$ and $j$ to $k$, denoted
-$\times_{i, j}^k (\Phi, \mathcal{M})$, is $(\Phi', \mathcal{M}')$,
-where
-\begin{align*}
-  \Phi' = & \setformer{ %
-    \replace{ \varphi }{ %
-      (i, p), (j, q) }{ %
-      (k, \tyleftprod \cons p), (k, \tyrightprod \cons q) } }{ %
-    \varphi \in \Phi, p, q \in \typos } \\
-  \mathcal{M}' = & \setformer{ %
-    \replace{ M }{ %
-    (i, p), (j, q) }{ %
-    (k, \tyleftprod \cons p), (k, \tyrightprod \cons q) } }{ %
-    M \in \mathcal{M}, p, q \in \typos }
-\end{align*}
-%
-It is straightforward to prove that if $(\Phi, \mathcal{M})$ is a
-relational refinement types, then $(\Phi', \mathcal{M}')$ is a
-relational refinement type.
+$(\Phi, \mathcal{M})$ from $i$ and $j$ to $k$, is
+$\times_{i, j}^k (\Phi, \mathcal{M}) = (\tyleftprod \prepend{i}{k}
+\tyrightprod \prepend{j}{k} \Phi, \tyleftprod \prepend{i}{k}
+\tyrightprod \prepend{j}{k} \mathcal{M})$.
 
 \paragraph{Relational refinement least-fixed points}
 The indexed least-fixed point of relational type $\tau$ at index $i$
@@ -181,20 +182,9 @@ type at $i$.
 I.e., for space of indices $I$ and index $i \in I$, $X \in \lfpvars$,
 $\Phi \subseteq \refpreds{ \idxpos{I} }$, and
 $\mathcal{M} \subseteq \pset(\idxpos{I})$, the least-fixed point of
-$(\Phi, \mathcal{M})$ at $i$, denoted $\mu_i X. (\Phi, \mathcal{M})$,
-is $(\Phi', \mathcal{M}')$, where
-%
-\begin{align*}
-  \Phi' = & \setformer{ %
-            \replace{ \varphi }{ %
-            (i, p_0), \ldots, (i, p_n) }{ %
-            (i, \mu_X \cons p_0), \ldots, (i, \mu_X \cons p_n) } }{ %
-            \varphi \in \Phi } \\
-  \mathcal{M}' = & \setformer{ %
-                  \replace{ M }{ (i, p_0), \ldots, (i, p_n) }{ %
-                  (i, \mu_X \cons p_0), \ldots, (i, \mu_X \cons p_n) } }{
-                  M \in \mathcal{M} }
-\end{align*}
+$(\Phi, \mathcal{M})$ at $i$ is
+$\mu_i X. (\Phi, \mathcal{M}) = (\mu_X \prepend{i}{i} \Phi, \mu_X
+\prepend{i}{i} \mathcal{M})$.
 
 \paragraph{Replacing type variables in relational refinement types}
 %
