--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -205,6 +205,8 @@
 
 \newcommand{\posreltypes}{T_R^{X \union \exppos}}
 
+\newcommand{\prepend}[2]{\cons_{#1}^{#2}}
+
 \newcommand{\prevrule}[1]{\mathsf{Prev}[ #1 ]}
 
 \newcommand{\progders}[1]{\mathsf{Ders}[ #1 ]}
